# kube_q

./: .env.example  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: ci.yml  docs.yml  publish.yml
404/: index.html
Formula/: kube-q.rb
assets/brand/: README.txt
changelog/: index.html
cli-reference/: index.html
commands/: index.html
configuration/: index.html
deployment/: index.html
docs/: 404.md  changelog.md  cli-reference.md  commands.md  configuration.md  deployment.md  faq.md  file-attachments.md  hitl.md  index.md  installation.md  quickstart.md  sdk.md  session-history.md  token-tracking.md  troubleshooting.md  web-ui.md
docs/stylesheets/: extra.css
faq/: index.html
file-attachments/: index.html
hitl/: index.html
installation/: index.html
javascripts/: extra.js
kube_q/: config.py  costs.py  main.py  plugins.py  render.py  session.py  store.py  transport.py
kube_q/cli/: config_cmd.py  main.py  renderer.py  repl.py  store.py
kube_q/core/: backends.py  client.py  config.py  events.py  kubeconfig.py  session.py  transport.py
quickstart/: index.html
scripts/: check-event-parity.py
sdk/: index.html
search/: search_index.json
session-history/: index.html
tests/: test_config.py  test_costs.py  test_render.py  test_repl_integration.py  test_session.py  test_store.py  test_transport.py
tests/core/: test_client_replay.py  test_events.py
token-tracking/: index.html
troubleshooting/: index.html
web/: README.md  next.config.ts  package-lock.json  package.json  pty-server.mjs  server.mjs
web-ui/: index.html
web/app/: globals.css  layout.tsx  page.tsx
web/components/: PtyTerminal.tsx
